@@ -97,6 +97,9 @@ module(load="omuxsock")
             {% if "tcp" in frontend.listening_mode %}
                 input(type="imtcp"
                       SupportOctetCountedFraming="{% if frontend.disable_octet_counting_framing %}off{% else %}on{% endif %}"
+                      {%- if frontend.custom_tl_frame_delimiter != -1 %}
+                      AddtlFrameDelimiter="{{frontend.custom_tl_frame_delimiter}}"
+                      {%- endif %}
                       {{ listener.generate_rsyslog_conf() }}
                       {%- if frontend.ratelimit_interval %}
                         RateLimit.Interval="{{frontend.ratelimit_interval}}"
