@@ -293,7 +293,8 @@ class FrontendForm(ModelForm):
                   'enable_compression', 'compression_algos', 'compression_mime_types', 'error_template',
                   'log_forwarders', 'tenants_config', 'enable_logging_reputation', 'logging_reputation_database_v4',
                   'logging_reputation_database_v6', 'logging_geoip_database', 'timeout_client',
-                  'timeout_keep_alive', 'disable_octet_counting_framing', 'https_redirect', 'log_forwarders_parse_failure', 'parser_tag',
+                  'timeout_keep_alive', 'disable_octet_counting_framing', 'custom_tl_frame_delimiter',
+                  'https_redirect', 'log_forwarders_parse_failure', 'parser_tag',
                   'ratelimit_interval', 'ratelimit_burst', 'file_path',
                   'kafka_brokers', 'kafka_topic', 'kafka_consumer_group', 'kafka_options',
                   'nb_workers','mmdb_cache_size','redis_batch_size',
@@ -363,6 +364,7 @@ class FrontendForm(ModelForm):
             'filebeat_module': Select(choices=FILEBEAT_MODULE_LIST, attrs={'class': 'form-control select2'}),
             'filebeat_config': Textarea(attrs={'class': 'form-control'}),
             'disable_octet_counting_framing': CheckboxInput(attrs={'class': " js-switch"}),
+            'custom_tl_frame_delimiter': NumberInput(attrs={'class': 'form-control'}),
             'custom_haproxy_conf': Textarea(attrs={'class': 'form-control'}),
             'enable_cache': CheckboxInput(attrs={'class': " js-switch"}),
             'cache_total_max_size': NumberInput(attrs={'class': 'form-control'}),
